ingress/deploy-laptop.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: laptop-tomcat
  labels: 
    app: laptop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laptop
  template:
    metadata:
      name: laptop-temp
      labels: 
        app: laptop
    spec:
      containers:
      - name: laptop-cont
        image: tomcat:latest
        containerPort: 8080
...
---
apiVersion: v1
kind: Service
metadata: 
  name: my-laptop-svc
  labels: 
    app: laptop
spec: 
  type: ClusterIP
  selector: 
    app: laptop
  ports:
  - port: 8080
    targetPort: 8080
