ingress/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - host: k8s-kong-kongkong-8b58f4a45f-f21a5153cd28624f.elb.ap-south-1.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-home-svc
            port:
              number: 80
      - path: /mobile
        pathType: Prefix
        backend:
          service:
            name: my-mobile-svc
            port:
              number: 80
      - path: /laptop
        pathType: Prefix
        backend: 
          service: 
            name: my-laptop-svc
            port: 
              number: 8080
